--- a/client/package.json
+++ b/client/package.json
@@ -18,5 +18,8 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^4.1.1"
+  },
+  "dependencies": {
+    "yarn": "^1.15.2"
   }
 }
