--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,11 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^3.0.0-alpha.30",
+    "classnames": "latest",
+    "clsx": "^1.0.4",
     "electron-is-dev": "^0.3.0",
     "electron-publisher-s3": "^20.17.2",
+    "immutable": "^4.0.0-rc.12",
     "prop-types": "latest",
     "react": "^16.4.1",
     "react-dev-utils": "^5.0.1",
