--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "dev": "yarn react-scripts start",
     "build": "react-scripts build",
-    "start": "concurrently \"cross-env BROWSER=none yarn react-scripts start\" \"wait-on http://localhost:3000 && electron .\"",
+    "start": "concurrently \"cross-env BROWSER=none yarn react-scripts start\" \"wait-on http:Â//localhost:3000 && electron .\"",
     "pack": "electron-builder --dir",
     "dist": "npx build --x64 --macos --win --linux --c.extraMetadata.main=build/electron.js -p always"
   },
