--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,10 @@
     "electron": "^4.1.1"
   },
   "dependencies": {
+    "bootstrap-material-design": "^4.1.2",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.0.1",
     "yarn": "^1.15.2"
   }
 }
