--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,9 @@
     "bootstrap-material-design": "^4.1.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
-    "popper.js": "^1.0.1",
+    "material-design-icons": "^3.0.1",
+    "material-design-icons-iconfont": "^5.0.1",
+    "popper.js": "^1.15.0",
     "yarn": "^1.15.2"
   }
 }
