--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.4.1",
     "material-design-icons": "^3.0.1",
     "material-design-icons-iconfont": "^5.0.1",
+    "npm": "^6.9.0",
     "popper.js": "^1.15.0",
     "yarn": "^1.15.2"
   }
