--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ jobs:
     - stage: "Unit Tests"
 
       name : "Back end"
-      script: python -m unittest discover -s server -p "*_test.py" -v
+      script: python -m unittest discover -s server -p "test_*.py" -v
