--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "material-design-icons": "^3.0.1",
     "material-design-icons-iconfont": "^5.0.1",
     "npm": "^6.9.0",
+    "open-iconic": "^1.1.1",
     "popper.js": "^1.15.0",
     "yarn": "^1.15.2"
   }
