--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.9.0",
     "electron": "^4.1.1"
   },
   "dependencies": {
