--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,8 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "elements": "^0.6.0",
     "react": "16.8.3",
-    "react-native": "0.59.8"
+    "react-native": "^0.59.8",
+    "react-native-elements": "^1.1.0",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-native-vector-icons": "^6.5.0",
+    "react-navigation": "^3.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
