/client mac package

--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,9 @@
     "win": {
       "icon": "./assets/images/icons/icon.ico"
     },
+    "mac": {
+      "type": "development"
+    },
     "files": [
       "core/**/*",
       "assets/**/*",
